使用 Colaboratory 创建

--- a/lab1/Lab_1_ipynb.ipynb
+++ b/lab1/Lab_1_ipynb.ipynb
@@ -43,12 +43,15 @@
         "id": "vbu3Vga33lw3"
       },
       "source": [
+        "import numpy as np\n",
+        "\n",
+        "\n",
         "def avg(marks):\n",
         "    # YOUR CODE HERE\n",
-        "\n",
+        "    return sum(marks) / len(marks)\n",
         "mark2 = [55,88,78,90,79]"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -60,7 +63,7 @@
         "# Only run this cell to check your answer. If it is true then no error will be raised\n",
         "assert(avg(mark2) == np.mean(mark2))"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -81,28 +84,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1abf089-99bc-4342-b7f1-71d2cc1f8c17"
+        "outputId": "b9938c66-fef4-4898-a188-b9e2f95d02e7"
       },
       "source": [
         "from math import pi # Use pi value from math package\n",
         "def areaCricle(radius):\n",
         "    # YOUR CODE HERE\n",
-        "\n",
+        "    return pi * radius * radius\n",
         "areaCricle(10)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "314.16"
+              "314.1592653589793"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 5
         }
       ]
     },
@@ -115,7 +118,7 @@
         "# Only run this cell to check your answer. If it is true then no error will be raised\n",
         "assert(round(areaCricle(10),2) == 314.16)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -135,10 +138,17 @@
       },
       "source": [
         "def reversed_list(in_list):\n",
+        "    i_left = 0\n",
+        "    i_right = len(in_list) - 1\n",
+        "    for i in range(int(len(in_list) / 2)):\n",
+        "        in_list[i_left], in_list[i_right] = in_list[i_right], in_list[i_left]\n",
+        "        i_left += 1\n",
+        "        i_right -= 1\n",
+        "    return in_list\n",
         "    # YOUR CODE HERE\n",
         "    raise NotImplementedError()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -150,7 +160,7 @@
         "# Only run this cell to check your answer. If it is true then no error will be raised\n",
         "assert(reversed_list([1, 2]) == [2, 1])"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -179,10 +189,20 @@
       },
       "source": [
         "def bubble_sort(in_list):\n",
+        "    for j in range(len(in_list) - 1):\n",
+        "        swap_times = 0\n",
+        "        for i in range(len(in_list) - 1):\n",
+        "            if in_list[i] > in_list[i + 1]:\n",
+        "                in_list[i], in_list[i + 1] = in_list[i + 1], in_list[i]\n",
+        "                swap_times += 1\n",
+        "        if swap_times == 0:\n",
+        "            break\n",
+        "    # YOUR CODE HERE\n",
+        "    return in_list\n",
         "    # YOUR CODE HERE\n",
         "    raise NotImplementedError()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -195,7 +215,7 @@
         "assert(bubble_sort([37, 42, 9, 19, 35, 4, 53, 22]) == [4, 9, 19, 22, 35, 37, 42, 53])\n",
         "assert(bubble_sort([5, 4, 3, 2, 1]) == [1, 2, 3, 4, 5])"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -231,28 +251,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dlMnigUrvxb9",
-        "outputId": "3c0e1b3a-32f6-4623-d810-805a733a2dc8"
+        "outputId": "06d39588-ff2d-4e3b-acba-5790f8596bba"
       },
       "source": [
         "def Fibonacci(n):\n",
+        "  f0, f1 = 0, 1\n",
+        "  for i in range(1, n - 1):\n",
+        "    f0, f1 = f1, f0 + f1\n",
         "\n",
+        "  return f1\n",
         "  raise NotImplementedError()\n",
         "\n",
         "Fibonacci(1)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 13
         }
       ]
     },
@@ -266,7 +290,7 @@
         "assert(Fibonacci(7) == 8)\n",
         "assert(Fibonacci(9) == 21)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     }
   ]
